[package]
name = "challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest ={ version =  "0.12.15", features = ["blocking","json"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde ={ version = "1.0.219"  , features = ["derive"] }
serde_json = "1.0.140"
